# Turtlorias

./: .clang-format  .clang-tidy  .cmake-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  TODO.md
Guides/GTest/: CMakeLists.txt  README.md
Guides/GTest/cmake_modules/: AddGoogleTest.cmake
Guides/GTest/src/: CMakeLists.txt  DummyFixture.hpp  DummyMock.hpp  FixtureTest.cpp  MockTest.cpp  SimpleTest.cpp
Guides/GTest/src/Dummy/: DummyClass.cpp  DummyClass.hpp  DummyFunctions.hpp
StructuresAndAlgorithms/src/: CMakeLists.txt  main.cpp
StructuresAndAlgorithms/src/Algorithms/: AlgorithmsSandbox.cpp  AlgorithmsSandbox.h  BinPowerT.h  CMakeLists.txt  Matrix.h  QuickSelectT.h
StructuresAndAlgorithms/src/Algorithms/test/: AlgorithmsTest.cpp  QuickSelectTest.cpp
StructuresAndAlgorithms/src/CppTricks/: StrangeDefaultValues.cpp  StreamRedirection.cpp  rangeBasedForModify.cpp  union.cpp
StructuresAndAlgorithms/src/CppTricks/FastPIMPL/: CMakeLists.txt  FastPimple.h
StructuresAndAlgorithms/src/CppTricks/FastPIMPL/HowToUse/: 3rdParty.cpp  3rdParty.h  Adapter.h  main.cpp
StructuresAndAlgorithms/src/CppTricks/POD_types/: POD.cpp  StandardLayout.cpp  TrivialStruct.cpp
StructuresAndAlgorithms/src/CppTricks/Traits/: CharTraits.h
StructuresAndAlgorithms/src/Helpers/: TestHelper.h
StructuresAndAlgorithms/src/Logger/: CMakeLists.txt  LogLevel.cpp  Logger.cpp  Logger.h  LoggerApi.h
StructuresAndAlgorithms/src/Logger/Logger/: LogFunction.h  LogLevel.cpp  LogLevel.h  LogMessage.h  Logger.cpp  Logger.h  LoggerConfig.h.in
StructuresAndAlgorithms/src/Logger/test/: LoggerTest.cpp
StructuresAndAlgorithms/src/Structures/: CMakeLists.txt  StructuresAPI.h
StructuresAndAlgorithms/src/Structures/Any/: Any.h
StructuresAndAlgorithms/src/Structures/Any/test/: AnyTest.cpp
StructuresAndAlgorithms/src/Structures/BigInteger/: BigInteger.h  Frame.h
StructuresAndAlgorithms/src/Structures/BigInteger/test/: BigIntegerTest.cpp
StructuresAndAlgorithms/src/Structures/BoolVector/test/: BoolVectorTest.cpp
StructuresAndAlgorithms/src/Structures/Effective/: CMakeLists.txt
StructuresAndAlgorithms/src/Structures/Effective/BigInteger/: BigInteger.cpp  BigInteger.h  Frame.h
StructuresAndAlgorithms/src/Structures/Effective/MinQueue/: MinQueue.cpp  MinQueue.h  MinQueueBase.h
StructuresAndAlgorithms/src/Structures/Effective/SegmentAccumulator/: ISegmentAccumulator.h  SegmentAccumulator.h
StructuresAndAlgorithms/src/Structures/Geometry/: BaseLine.h  CMakeLists.txt  Geometry.h  Polygon.h  Segment.h  Vector.h  geometry.cpp
StructuresAndAlgorithms/src/Structures/Geometry/test/: GeometryVectorTest.cpp  VectorTest.cpp
StructuresAndAlgorithms/src/Structures/Multithreading/: CMakeLists.txt
StructuresAndAlgorithms/src/Structures/STL/: CMakeLists.txt  STL.h
StructuresAndAlgorithms/src/Structures/SegmentAccumulator/: CMakeLists.txt  ISegmentAccumulator.h
StructuresAndAlgorithms/src/Structures/Vector/: Vector.h
(+276 files in other folders)
